fix:improve mobile layout + fix mobile layout issues

--- a/Frontend/src/app/modules/workspace/share/share.component.scss
+++ b/Frontend/src/app/modules/workspace/share/share.component.scss
@@ -187,6 +187,10 @@ a.active{
 .owner{
   cursor:default;
 }
+.groupHeading{
+  display:flex;
+  align-items:baseline;
+}
 .groupName{
   color:$textLight;
   font-size:90%;
@@ -231,8 +235,6 @@ img.inherit{
 .inheritCheck{
   float:left;
   padding-left: 20px;
-  position: relative;
-  top: 10px;
 }
 .manageLink{
   float:left;
@@ -270,3 +272,13 @@ label.notify p{
     width:50%;
   }
 }
+@media screen and (max-width: $mobileWidth - $mobileStage*2) {
+  .groupHeading{
+    flex-direction:column;
+    padding-bottom:5px;
+  }
+  .inheritCheck{
+    padding-left:5px;
+  }
+}
+
